--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -5,8 +5,8 @@
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
-            <div class='col-md-4'> 
-                <input type='text'[(ngModel)]='listFilter' />
+            <div class='col-md-4'>
+                <input type='text' [(ngModel)]='listFilter' />
             </div>
         </div>
         <div class='row'>
@@ -15,12 +15,11 @@
             </div>
         </div>
         <div class='table-responsive'>
-            <table class='table' *ngIf='products && products.length'>
+            <table class='table' >
                 <thead>
                     <tr>
                         <th>
-                            <button class='btn btn-primary'
-                                (click)='toggleImage()'>
+                            <button class='btn btn-primary' (click)='toggleImage()'>
                                 {{showImage ? 'Hide' : 'Show'}} Image
                             </button>
                         </th>
@@ -32,27 +31,22 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor='let product of products'>
+                    <tr *ngFor='let product of FilterList'>
                         <td>
-                            <img *ngIf='showImage'
-                                [src]='product.imageUrl'
-                                [title]='product.productName'
-                                [style.width.px]='imageWidth'
-                                [style.margin.px]='imageMargin'>
+                            <img *ngIf='showImage' [src]='product.imageUrl' [title]='product.productName' [style.width.px]='imageWidth' [style.margin.px]='imageMargin'>
                         </td>
                         <!-- [routerLink]="['/products', product.productId]" -->
                         <td> {{ product.productName }}
                             <!-- <a>
                                
                             </a> -->
-						</td>
-                        <td>{{ product.productCode | lowercase }}</td>
+                        </td>
+                        <td>{{ product.productCode | lowercase | convertToSpaces:'-' }}</td>
                         <td>{{ product.releaseDate }}</td>
                         <td>{{ product.price | currency:'USD':true:'1.2-2' }}</td>
                         <td>
-                            <!-- <pm-star [rating]='product.starRating'
-                                (ratingClicked)='onRatingClicked($event)'>
-							</pm-star> -->
+                            <pm-star [rating]='product.starRating' (notify)='fromChild($event)'>
+                            </pm-star>
                         </td>
                     </tr>
                 </tbody>
